--- a/run/application_config.json
+++ b/run/application_config.json
@@ -102,25 +102,26 @@
     "onerror": {
       "errorPageUrl": "",
       "appErrorFilter": null,
-      "templatePath": "G:\\Test\\egg\\node_modules\\egg-onerror\\lib\\onerror_page.mustache"
+      "templatePath": "E:\\Projects\\test\\egg\\node_modules\\egg-onerror\\lib\\onerror_page.mustache"
     },
     "i18n": {
       "defaultLocale": "en_US",
       "dirs": [
-        "G:\\Test\\egg\\node_modules\\egg-session\\config\\locales",
-        "G:\\Test\\egg\\node_modules\\egg-security\\config\\locales",
-        "G:\\Test\\egg\\node_modules\\egg-jsonp\\config\\locales",
-        "G:\\Test\\egg\\node_modules\\egg-onerror\\config\\locales",
-        "G:\\Test\\egg\\node_modules\\egg-i18n\\config\\locales",
-        "G:\\Test\\egg\\node_modules\\egg-watcher\\config\\locales",
-        "G:\\Test\\egg\\node_modules\\egg-schedule\\config\\locales",
-        "G:\\Test\\egg\\node_modules\\egg-multipart\\config\\locales",
-        "G:\\Test\\egg\\node_modules\\egg-development\\config\\locales",
-        "G:\\Test\\egg\\node_modules\\egg-logrotator\\config\\locales",
-        "G:\\Test\\egg\\node_modules\\egg-static\\config\\locales",
-        "G:\\Test\\egg\\node_modules\\egg-view\\config\\locales",
-        "G:\\Test\\egg\\node_modules\\egg\\config\\locales",
-        "G:\\Test\\egg\\config\\locales"
+        "E:\\Projects\\test\\egg\\node_modules\\egg-session\\config\\locales",
+        "E:\\Projects\\test\\egg\\node_modules\\egg-security\\config\\locales",
+        "E:\\Projects\\test\\egg\\node_modules\\egg-jsonp\\config\\locales",
+        "E:\\Projects\\test\\egg\\node_modules\\egg-onerror\\config\\locales",
+        "E:\\Projects\\test\\egg\\node_modules\\egg-i18n\\config\\locales",
+        "E:\\Projects\\test\\egg\\node_modules\\egg-watcher\\config\\locales",
+        "E:\\Projects\\test\\egg\\node_modules\\egg-schedule\\config\\locales",
+        "E:\\Projects\\test\\egg\\node_modules\\egg-multipart\\config\\locales",
+        "E:\\Projects\\test\\egg\\node_modules\\egg-development\\config\\locales",
+        "E:\\Projects\\test\\egg\\node_modules\\egg-logrotator\\config\\locales",
+        "E:\\Projects\\test\\egg\\node_modules\\egg-static\\config\\locales",
+        "E:\\Projects\\test\\egg\\node_modules\\egg-view\\config\\locales",
+        "E:\\Projects\\test\\egg\\node_modules\\egg-view-nunjucks\\config\\locales",
+        "E:\\Projects\\test\\egg\\node_modules\\egg\\config\\locales",
+        "E:\\Projects\\test\\egg\\config\\locales"
       ],
       "queryField": "locale",
       "cookieField": "locale",
@@ -131,8 +132,8 @@
     "watcher": {
       "type": "development",
       "eventSources": {
-        "default": "G:\\Test\\egg\\node_modules\\egg-watcher\\lib\\event-sources\\default",
-        "development": "G:\\Test\\egg\\node_modules\\egg-watcher\\lib\\event-sources\\development"
+        "default": "E:\\Projects\\test\\egg\\node_modules\\egg-watcher\\lib\\event-sources\\default",
+        "development": "E:\\Projects\\test\\egg\\node_modules\\egg-watcher\\lib\\event-sources\\development"
       }
     },
     "customLogger": {
@@ -156,7 +157,7 @@
       "fileExtensions": [],
       "whitelist": null,
       "allowArrayField": false,
-      "tmpdir": "C:\\Users\\ADMINI\\x7e1\\AppData\\Local\\Temp\\egg-multipart-tmp\\egg",
+      "tmpdir": "C:\\Users\\mircool\\AppData\\Local\\Temp\\egg-multipart-tmp\\egg",
       "cleanSchedule": {
         "cron": "0 30 4 * * *",
         "disable": false
@@ -181,18 +182,29 @@
     },
     "static": {
       "prefix": "/public/",
-      "dir": "G:\\Test\\egg\\app\\public",
+      "dir": "E:\\Projects\\test\\egg\\app\\public",
       "dynamic": true,
       "preload": false,
       "buffer": false,
       "maxFiles": 1000
     },
     "view": {
-      "root": "G:\\Test\\egg\\app\\view",
+      "root": [
+        "E:\\Projects\\test\\egg\\app\\view"
+      ],
       "cache": false,
       "defaultExtension": ".html",
-      "defaultViewEngine": "",
-      "mapping": {}
+      "defaultViewEngine": "nunjucks",
+      "mapping": {
+        ".html": "nunjucks"
+      }
+    },
+    "nunjucks": {
+      "autoescape": true,
+      "throwOnUndefined": false,
+      "trimBlocks": false,
+      "lstripBlocks": false,
+      "cache": false
     },
     "env": "local",
     "name": "egg",
@@ -216,15 +228,16 @@
       "author": "",
       "license": "ISC",
       "dependencies": {
-        "egg": "^2.36.0"
+        "egg": "^2.36.0",
+        "egg-view-nunjucks": "^2.3.0"
       },
       "devDependencies": {
         "egg-bin": "^5.1.0"
       }
     },
-    "baseDir": "G:\\Test\\egg",
-    "HOME": "C:\\Users\\Administrator",
-    "rundir": "G:\\Test\\egg\\run",
+    "baseDir": "E:\\Projects\\test\\egg",
+    "HOME": "C:\\Users\\mircool",
+    "rundir": "E:\\Projects\\test\\egg\\run",
     "dump": {
       "ignore": "<Set>"
     },
@@ -257,7 +270,7 @@
       "returnRawBody": true
     },
     "logger": {
-      "dir": "G:\\Test\\egg\\logs\\egg",
+      "dir": "E:\\Projects\\test\\egg\\logs\\egg",
       "encoding": "utf8",
       "env": "local",
       "level": "INFO",
@@ -352,8 +365,8 @@
         "jsonp"
       ],
       "env": [],
-      "from": "G:\\Test\\egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "G:\\Test\\egg\\node_modules\\egg-onerror",
+      "from": "E:\\Projects\\test\\egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "E:\\Projects\\test\\egg\\node_modules\\egg-onerror",
       "version": "2.1.0"
     },
     "session": {
@@ -363,8 +376,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "G:\\Test\\egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "G:\\Test\\egg\\node_modules\\egg-session",
+      "from": "E:\\Projects\\test\\egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "E:\\Projects\\test\\egg\\node_modules\\egg-session",
       "version": "3.3.0"
     },
     "i18n": {
@@ -374,8 +387,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "G:\\Test\\egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "G:\\Test\\egg\\node_modules\\egg-i18n",
+      "from": "E:\\Projects\\test\\egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "E:\\Projects\\test\\egg\\node_modules\\egg-i18n",
       "version": "2.1.1"
     },
     "watcher": {
@@ -385,8 +398,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "G:\\Test\\egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "G:\\Test\\egg\\node_modules\\egg-watcher",
+      "from": "E:\\Projects\\test\\egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "E:\\Projects\\test\\egg\\node_modules\\egg-watcher",
       "version": "3.1.1"
     },
     "multipart": {
@@ -398,8 +411,8 @@
         "schedule"
       ],
       "env": [],
-      "from": "G:\\Test\\egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "G:\\Test\\egg\\node_modules\\egg-multipart",
+      "from": "E:\\Projects\\test\\egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "E:\\Projects\\test\\egg\\node_modules\\egg-multipart",
       "version": "2.13.1"
     },
     "security": {
@@ -411,8 +424,8 @@
         "session"
       ],
       "env": [],
-      "from": "G:\\Test\\egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "G:\\Test\\egg\\node_modules\\egg-security",
+      "from": "E:\\Projects\\test\\egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "E:\\Projects\\test\\egg\\node_modules\\egg-security",
       "version": "2.10.1"
     },
     "development": {
@@ -426,8 +439,8 @@
       "env": [
         "local"
       ],
-      "from": "G:\\Test\\egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "G:\\Test\\egg\\node_modules\\egg-development",
+      "from": "E:\\Projects\\test\\egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "E:\\Projects\\test\\egg\\node_modules\\egg-development",
       "version": "2.7.0"
     },
     "logrotator": {
@@ -439,8 +452,8 @@
       ],
       "optionalDependencies": [],
       "env": [],
-      "from": "G:\\Test\\egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "G:\\Test\\egg\\node_modules\\egg-logrotator",
+      "from": "E:\\Projects\\test\\egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "E:\\Projects\\test\\egg\\node_modules\\egg-logrotator",
       "version": "3.1.0"
     },
     "schedule": {
@@ -450,8 +463,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "G:\\Test\\egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "G:\\Test\\egg\\node_modules\\egg-schedule",
+      "from": "E:\\Projects\\test\\egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "E:\\Projects\\test\\egg\\node_modules\\egg-schedule",
       "version": "3.6.6"
     },
     "static": {
@@ -461,8 +474,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "G:\\Test\\egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "G:\\Test\\egg\\node_modules\\egg-static",
+      "from": "E:\\Projects\\test\\egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "E:\\Projects\\test\\egg\\node_modules\\egg-static",
       "version": "2.2.0"
     },
     "jsonp": {
@@ -474,8 +487,8 @@
         "security"
       ],
       "env": [],
-      "from": "G:\\Test\\egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "G:\\Test\\egg\\node_modules\\egg-jsonp",
+      "from": "E:\\Projects\\test\\egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "E:\\Projects\\test\\egg\\node_modules\\egg-jsonp",
       "version": "2.0.0"
     },
     "view": {
@@ -485,16 +498,30 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "G:\\Test\\egg\\node_modules\\egg\\config\\plugin.js",
-      "path": "G:\\Test\\egg\\node_modules\\egg-view",
+      "from": "E:\\Projects\\test\\egg\\node_modules\\egg\\config\\plugin.js",
+      "path": "E:\\Projects\\test\\egg\\node_modules\\egg-view",
       "version": "2.1.3"
+    },
+    "nunjucks": {
+      "enable": true,
+      "package": "egg-view-nunjucks",
+      "name": "nunjucks",
+      "dependencies": [
+        "security",
+        "view"
+      ],
+      "optionalDependencies": [],
+      "env": [],
+      "from": "E:\\Projects\\test\\egg\\config\\plugin.js",
+      "path": "E:\\Projects\\test\\egg\\node_modules\\egg-view-nunjucks",
+      "version": "2.3.0"
     }
   },
   "appInfo": {
     "name": "egg",
-    "baseDir": "G:\\Test\\egg",
+    "baseDir": "E:\\Projects\\test\\egg",
     "env": "local",
-    "HOME": "C:\\Users\\Administrator",
+    "HOME": "C:\\Users\\mircool",
     "pkg": {
       "name": "egg",
       "version": "1.0.0",
@@ -507,12 +534,13 @@
       "author": "",
       "license": "ISC",
       "dependencies": {
-        "egg": "^2.36.0"
+        "egg": "^2.36.0",
+        "egg-view-nunjucks": "^2.3.0"
       },
       "devDependencies": {
         "egg-bin": "^5.1.0"
       }
     },
-    "root": "G:\\Test\\egg"
+    "root": "E:\\Projects\\test\\egg"
   }
 }
