--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "egg": "^2.36.0"
+    "egg": "^2.36.0",
+    "egg-view-nunjucks": "^2.3.0"
   },
   "devDependencies": {
     "egg-bin": "^5.1.0"
